src/test/resources/tags/extendstag/errors/extends-outside-block-error.jinja
{% extends "/errors/outside-block-error.html" %}
